# rustapi

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: rust.yml
archive/: docker-compose.yml
src/: handlers.rs  main.rs  videos.rs
src/handlers/: auth.rs  mod.rs  video.rs
src/models/: mod.rs  user.rs  video.rs
templates/: login.html  videos.html
tests/: api_integration_tests.rs
