[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.0"
tera = "1.14.0"
chrono = "0.4"
rusoto_signature = "0.47.0"
s3-presign = "0.0.2"
url = "2.2.2"
tokio-postgres = "0.7"
dotenv = "0.15"
anyhow = "1.0"
reqwest = "0.11"
actix-cors = "0.6"
bb8 = "0.7"
bb8-postgres = "0.7"
