[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web ={version = "4.5.1", features = ["rustls"]}
tera = "1.19.1"
tokio-postgres = "0.7.10"
dotenv = "0.15"
anyhow = "1.0.79"
actix-cors = "0.7"
bb8 = "0.7"
bb8-postgres = "0.7"
actix-session = "0.9"
firebase-auth = "0.4.2"
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls"] }
env_logger = "0.10.0"
log = "0.4.14"
#reqwest = "0.11.24"

